--- a/KickSport.Services.DataServices/KickSport.Services.DataServices.csproj
+++ b/KickSport.Services.DataServices/KickSport.Services.DataServices.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KickSport.Data\KickSport.Data.csproj" />
+  </ItemGroup>
+
 </Project>
