--- a/KickSport/appsettings.json
+++ b/KickSport/appsettings.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=KickSport;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSettings": {
+    "Secret": "@%very@@secret%@"
+  },
+  "FacebookSettings": {
+    "AppId": "212702559538083",
+    "AppSecret": "b31df0ee6cca7239a6a5c6ce8e67c838"
+  },
   "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-"AllowedHosts": "*"
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
