--- a/KickSport/ClientApp/package.json
+++ b/KickSport/ClientApp/package.json
@@ -16,23 +16,33 @@
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
     "@angular/forms": "~8.2.13",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ng-select/ng-select": "^3.6.0",
     "@ngrx/store": "^8.5.1",
     "angular-bootstrap-md": "^8.6.0",
+    "angular5-csv": "^0.2.11",
     "angularx-social-login": "^2.1.1",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.2",
+    "core-js": "^3.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "ngrx-store-logger": "^0.2.4",
     "ngx-pagination": "^4.1.0",
     "ngx-spinner": "^8.0.3",
     "ngx-toastr": "^11.2.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
