--- a/KickSport/ClientApp/package.json
+++ b/KickSport/ClientApp/package.json
@@ -29,6 +29,7 @@
     "@ng-select/ng-select": "^3.6.0",
     "@ngrx/store": "^8.5.1",
     "angular-bootstrap-md": "^8.6.0",
+    "angular-font-awesome": "^3.1.2",
     "angular5-csv": "^0.2.11",
     "angularx-social-login": "^2.1.1",
     "bootstrap": "^4.3.1",
@@ -38,6 +39,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "mdbootstrap": "^4.9.0",
     "ngrx-store-logger": "^0.2.4",
     "ngx-pagination": "^4.1.0",
     "ngx-spinner": "^8.0.3",
