Update UI and fix bug Front-end

--- a/KickSport/ClientApp/tsconfig.json
+++ b/KickSport/ClientApp/tsconfig.json
@@ -19,6 +19,7 @@
       "dom"
     ]
   },
+  "include": ["src/**/*.ts","node_modules/angular-bootstrap-md/**/*.ts"],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
