--- a/KickSport/ClientApp/package.json
+++ b/KickSport/ClientApp/package.json
@@ -22,18 +22,21 @@
     "@angular/router": "~8.2.13",
     "@aspnet/signalr": "^1.1.4",
     "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ng-select/ng-select": "^3.6.0",
     "@ngrx/store": "^8.5.1",
+    "@types/chart.js": "^2.9.0",
     "angular-bootstrap-md": "^8.6.0",
     "angular-font-awesome": "^3.1.2",
     "angular5-csv": "^0.2.11",
     "angularx-social-login": "^2.1.1",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.9.2",
+    "chart.js": "^2.5.0",
     "core-js": "^3.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
