--- a/KickSport/KickSport.Web.csproj
+++ b/KickSport/KickSport.Web.csproj
@@ -47,7 +47,9 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="ClientApp\src\assets\images\" />
     <Folder Include="Hubs\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
